<resources>
    <string name="app_name">GoalAchiever</string>

    <string name="title_activity_setup_timer">SetupTimerActivity</string>
    <string name="time_divider">:</string>
    <string name="until">Until</string>
    <string name="later">Later</string>
    <string name="hours">Hours</string>
    <string name="hour">hour</string>
    <string name="minutes">Minutes</string>
    <string name="minute">Minute</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="no_input_timer">PICK A TIME</string>

    <string name="btn_start">START</string>
    <string name="btn_roulette">ROULETTE</string>
    <string name="btn_collection">COLLECTION</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_back">BACK</string>
    <string name="btn_buy">BUY</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_replay">REPLAY</string>

    <string name="title_activity_watcher">WatcherActivity</string>
    <string name="watcher_preset">Lock\nYour\nPhone</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="coin_preset">0</string>

    <string name="title_activity_result">ResultActivity</string>

    <string name="result_fail_1">Uh..oh...</string>
    <string name="result_fail_2">You can do better next time</string>
    <string name="result_fail_3">Come back next time</string>
    <string name="result_fail_4">It was close</string>
    <string name="result_succeed_1">Great!!</string>
    <string name="result_succeed_2">Nice Work!!</string>
    <string name="result_succeed_3">Well Done!!</string>
    <string name="result_stop">Comeback next time</string>

    <string name="title_activity_roulette">RouletteActivity</string>

    <string name="title_activity_collection">CollectionActivity</string>

</resources>
