<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="roh.sijine.goalachiever.SetupTimerActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/hour_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/time_divider_side_margin"
                    android:gravity="center"
                    android:text="@string/time_divider"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <NumberPicker
                    android:id="@+id/min_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_time_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/time_notice_top_margin"
                android:text="@string/no_input_timer"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="horizontal">

                <com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_start" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/btn_roulette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/roulette_colleciton_margin"
                    android:gravity="center"
                    android:text="@string/btn_roulette" />

                <com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/btn_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_collection" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
