<!--<FrameLayout >-->

<!-- The primary full-screen view. This can be replaced with whatever view
     is needed to present your content, e.g. VideoView, SurfaceView,
     TextureView, etc. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="roh.sijine.focusimprovement.WatcherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/watcher_preset"
            android:textColor="@color/text_white"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_result_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/result_coin_text_size"
            android:layout_height="@dimen/result_coin_text_size"
            android:src="@drawable/ic_coin" />

        <TextView
            android:id="@+id/text_reward_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="1dp"
            android:text="@string/coin_preset"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_white"
            android:textSize="@dimen/result_coin_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/button_bottom_margin">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/roulette_colleciton_margin"
            android:paddingLeft="@dimen/button_padding_horizontal"
            android:paddingRight="@dimen/button_padding_horizontal"
            android:text="@string/btn_back"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_peter_river"
            fbutton:cornerRadius="5dp"
            fbutton:shadowColor="@color/fbutton_color_belize_hole"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_replay"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/roulette_colleciton_margin"
            android:paddingLeft="@dimen/button_padding_horizontal"
            android:paddingRight="@dimen/button_padding_horizontal"
            android:text="@string/btn_replay"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:cornerRadius="5dp"
            fbutton:shadowColor="@color/fbutton_color_green_sea"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp" />

    </LinearLayout>

</LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <!--</FrameLayout>-->
